k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic-svc
  namespace: pet-clinic-app
spec:
  type: NodePort
  selector:
    app: petclinic
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 31000
